<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <POU Name="F_SBVentInterlock" Id="{2fc3d28b-9e53-4413-b140-bcabfe291b99}" SpecialFunc="None">
    <Declaration><![CDATA[// Verify that all Switchbox valves are closed
FUNCTION F_SBVentInterlock : BOOL
VAR_INPUT
END_VAR
VAR
	stExpValveStatus : ST_SBValveStatuses := (
		bGateValveOpen:= FALSE, 
		bVentValveOpen:= FALSE, 
		bORingPumpValveOpen:= FALSE, 
		bForelineValveOpen:= FALSE, 
		bSlowPumpValveOpen:= FALSE,
		bSBVentOpen:= NOT GVL_BTS_VAC.st_VP_VVC_1.xCLS_DO,
		bSBSlowVentOpen:= NOT GVL_BTS_VAC.st_VP_VVC_2.xCLS_DO);
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[F_SBVentInterlock := F_VerifySBValveStatuses(stExpStatus := stExpValveStatus, bEnforce := FALSE);]]></ST>
    </Implementation>
    <LineIds Name="F_SBVentInterlock">
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>