<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.17">
  <POU Name="F_GetSBPumpStatuses" Id="{313da96e-dc11-40df-9e69-b509fa4c6f5a}" SpecialFunc="None">
    <Declaration><![CDATA[(* Get the status of the pumps for the switchbox *)
FUNCTION F_GetSBPumpStatuses : ST_SBPumpStatuses
VAR_INPUT
END_VAR
VAR
	stStatus : ST_SBPumpStatuses := (
		bRoughingPumpOn:= GVL_BTS_VAC.fb_PP_PMF.q_stPump.i_xIsRun,
		bTurboPumpOn:= GVL_BTS_VAC.fb_PP_PTM.q_RunDO, 
		bIonPumpOn:= GVL_BTS_VAC.fb_PP_PIP.q_xHVEna_DO);
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[F_GetSBPumpStatuses := stStatus;]]></ST>
    </Implementation>
    <LineIds Name="F_GetSBPumpStatuses">
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>